--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Author URL: http://templatestock.co
 <!DOCTYPE html>
 <html>
 <head>
-<title>Above Free Responsive Template | Template Stock</title>
+<title>Moe Khodry</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Onepage Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -59,7 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <article style="position: absolute; width: 100%; opacity: 0;"> 
 				   	<div class="banner-wrap">
 				   	       	<div class="banner_center">
-				   		 		<h1>hello world,</h1> 
+				   		 		<h1>Hello Iam Moe</h1> 
 				   		 		<h2>i am <span>graphic & web designer</span></h2>
 				   		 		<h2>from morocco</h2>
 				   		 		</div>
