--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ Author URL: http://templatestock.co
 <title>Moe Khodry</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Onepage Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+//
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	    
@@ -60,8 +59,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	<div class="banner-wrap">
 				   	       	<div class="banner_center">
 				   		 		<h1>Hello Iam Moe</h1> 
-				   		 		<h2>i am <span>graphic & web designer</span></h2>
-				   		 		<h2>from morocco</h2>
+				   		 		<h2>i am <span>electrical engineer</span></h2>
+				   		 		<h2>from egypt</h2>
 				   		 		</div>
 				   		 </div>
 					</article>
